rsyslog (5.7.4-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Thu, 17 Feb 2011 21:19:44 +0100

rsyslog (5.7.3-1) unstable; urgency=low

  * New upstream release.
  * Upload to unstable.
  * debian/patches/02-typo_fix_equation_sign.patch
    - Removed, merged upstream.
  * debian/patches/03-atomic_operations.patch
    - Removed, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Wed, 09 Feb 2011 06:10:46 +0100

rsyslog (5.7.2-2) experimental; urgency=low

  * debian/patches/03-atomic_operations.patch
    - Fix build failures on platforms which don't have 64 bit atomic
      operations. Patch cherry-picked from upstream Git. Closes: #600930

 -- Michael Biebl <biebl@debian.org>  Wed, 01 Dec 2010 21:20:28 +0100

rsyslog (5.7.2-1) experimental; urgency=low

  * New upstream development release.
  * Remove patches, merged upstream
    - debian/patches/02-install_also_rsyslog_socket.patch
    - debian/patches/02-tls_loop_fix.patch
  * debian/patches/02-typo_fix_equation_sign.patch
    - Fix small typo ("equation sign"). Closes: #575589
  * debian/rsyslog.postinst
    - Remove pre-lenny migration code to rotate old log files from sysklogd.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Nov 2010 15:30:56 +0100

rsyslog (5.7.1-1) experimental; urgency=low

  * New upstream development release.
  * debian/rsyslog.install
    - Install omruleset.so plugin: http://www.rsyslog.com/doc/omruleset.html
  * debian/rsyslog.default
    - Start rsyslogd with native -c5 mode.
  * Install systemd unit files which allow to run rsyslog in socket activation
    mode when systemd is used.
  * debian/patches/02-install_also_rsyslog_socket.patch
    - When enabling rsyslog.service also enable rsyslog.socket. Patch
      cherry-picked from upstream Git.
  * Bump debhelper compatibility level to 8. Update Build-Depends accordingly.

 -- Michael Biebl <biebl@debian.org>  Wed, 20 Oct 2010 01:48:39 +0200

rsyslog (4.6.4-2) unstable; urgency=low
