@@ -17,5 +17,6 @@ debian/tmp/usr/lib/rsyslog/lmtcpsrv.so
 debian/tmp/usr/lib/rsyslog/lmzlibw.so
 debian/tmp/usr/lib/rsyslog/ommail.so
 debian/tmp/usr/lib/rsyslog/omruleset.so
+debian/tmp/usr/lib/rsyslog/pm*.so
 debian/tmp/lib/systemd/system/rsyslog.service
 debian/tmp/lib/systemd/system/rsyslog.socket
