@@ -12,6 +12,11 @@ override_dh_auto_configure:
 		--enable-gssapi-krb5 \
 		--enable-gnutls \
 		--enable-relp \
+		--enable-pmaixforwardedfrom \
+		--enable-pmcisconames \
+		--enable-pmlastmsg \
+		--enable-pmrfc3164sd \
+		--enable-pmsnare \
 		--disable-testbench \
 		--with-systemdsystemunitdir=/lib/systemd/system
 
